treaty/src/net/java/treaty/script/generated/TreatyParser.java
// $ANTLR 3.1.1 /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g 2009-10-31 13:11:30

package net.java.treaty.script.generated;

import java.net.URI;

import net.java.treaty.*;
import net.java.treaty.script.TreatyRecognitionException;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
/** 
 * A Treaty script grammar for ANTLRv3. 
 */
public class TreatyParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Newline", "AnnotationKey", "AnnotationValue", "Trigger", "Identifier", "NameAttribute", "ResourceTypeAttribute", "ResourceReferenceAttribute", "Or", "XOr", "And", "Not", "LParen", "RParen", "Uri", "Amper", "Apostrophe", "Asterisk", "At", "Colon", "Comma", "Dollar", "Dot", "Equals", "Exclamation", "Hash", "Minus", "Percent", "Plus", "Question", "Semi", "Slash", "Tilde", "Whitespace", "String", "Annotation", "NamespaceDelimiter", "IDLetter", "IDDigit", "BlockComment", "LineComment", "UriCharacter", "UriReserved", "UriUnescaped", "UriEscaped", "UriAlpha", "DecimalDigit", "UriMark", "HexDigit", "'consumer-resource'", "'supplier-resource'", "'constraint'", "'mustexist'", "'onfailure'", "'onsuccess'"
    };
    public static final int NameAttribute=9;
    public static final int Hash=29;
    public static final int LineComment=44;
    public static final int Newline=4;
    public static final int AnnotationValue=6;
    public static final int Uri=18;
    public static final int DecimalDigit=50;
    public static final int IDLetter=41;
    public static final int AnnotationKey=5;
    public static final int EOF=-1;
    public static final int Percent=31;
    public static final int HexDigit=52;
    public static final int Identifier=8;
    public static final int Amper=19;
    public static final int BlockComment=43;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int XOr=13;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int UriCharacter=45;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int UriUnescaped=47;
    public static final int String=38;
    public static final int Or=12;
    public static final int IDDigit=42;
    public static final int Whitespace=37;
    public static final int ResourceReferenceAttribute=11;
    public static final int Dollar=25;
    public static final int NamespaceDelimiter=40;
    public static final int And=14;
    public static final int Tilde=36;
    public static final int Asterisk=21;
    public static final int RParen=17;
    public static final int At=22;
    public static final int Exclamation=28;
    public static final int LParen=16;
    public static final int Trigger=7;
    public static final int Colon=23;
    public static final int Question=33;
    public static final int UriMark=51;
    public static final int Plus=32;
    public static final int Minus=30;
    public static final int UriReserved=46;
    public static final int Semi=34;
    public static final int UriAlpha=49;
    public static final int Not=15;
    public static final int Dot=26;
    public static final int UriEscaped=48;
    public static final int Annotation=39;
    public static final int Comma=24;
    public static final int Equals=27;
    public static final int Apostrophe=20;
    public static final int Slash=35;
    public static final int ResourceTypeAttribute=10;

    // delegates
    // delegators


        public TreatyParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TreatyParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return TreatyParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g"; }


    private Contract contract;

    private Resource createConsumerResource(String id, URI resourceType, String className) {
        Resource resource = createResource(id, resourceType);
        
        resource.setName(className);
        
        return resource;
    }

    private Resource createSupplierResource(String id, URI resourceType, String resourceReference) {
        Resource resource = createResource(id, resourceType);
        
        resource.setRef(resourceReference);
        
        return resource;
    }

    private Resource createResource(String id, URI resourceType) {
        Resource resource = new Resource();
        
        resource.setId(id);
        resource.setType(resourceType);
        
        return resource;
    }



    // $ANTLR start "contract"
    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:86:1: contract returns [Contract value] : ( statment | Newline )* EOF ;
    public final Contract contract() throws RecognitionException {
        Contract value = null;

         contract = new Contract(); value = contract; 
        try {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:88:5: ( ( statment | Newline )* EOF )
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:88:9: ( statment | Newline )* EOF
            {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:88:9: ( statment | Newline )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==AnnotationKey||LA1_0==Trigger||(LA1_0>=53 && LA1_0<=55)||(LA1_0>=57 && LA1_0<=58)) ) {
                    alt1=1;
                }
                else if ( (LA1_0==Newline) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:88:10: statment
            	    {
            	    pushFollow(FOLLOW_statment_in_contract70);
            	    statment();

            	    state._fsp--;
            	    if (state.failed) return value;

            	    }
            	    break;
            	case 2 :
            	    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:88:21: Newline
            	    {
            	    match(input,Newline,FOLLOW_Newline_in_contract74); if (state.failed) return value;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_contract78); if (state.failed) return value;

            }

        }

            catch (RecognitionException e) {
                reportError(e);
                throw e;
            } catch (Exception e) {
                throw new TreatyRecognitionException(this.input, e);
            }
        finally {
        }
        return value;
    }
    // $ANTLR end "contract"


    // $ANTLR start "statment"
    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:91:1: statment : ( annotation | trigger | consumerResource | supplierResource | constraint | onFailure | onSuccess ) Newline ;
    public final void statment() throws RecognitionException {
        TreatyParser.annotation_return annotation1 = null;

        URI trigger2 = null;

        Resource consumerResource3 = null;

        Resource supplierResource4 = null;

        AbstractCondition constraint5 = null;

        URI onFailure6 = null;

        URI onSuccess7 = null;


        try {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:92:5: ( ( annotation | trigger | consumerResource | supplierResource | constraint | onFailure | onSuccess ) Newline )
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:92:9: ( annotation | trigger | consumerResource | supplierResource | constraint | onFailure | onSuccess ) Newline
            {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:92:9: ( annotation | trigger | consumerResource | supplierResource | constraint | onFailure | onSuccess )
            int alt2=7;
            switch ( input.LA(1) ) {
            case AnnotationKey:
                {
                alt2=1;
                }
                break;
            case Trigger:
                {
                alt2=2;
                }
                break;
            case 53:
                {
                alt2=3;
                }
                break;
            case 54:
                {
                alt2=4;
                }
                break;
            case 55:
                {
                alt2=5;
                }
                break;
            case 57:
                {
                alt2=6;
                }
                break;
            case 58:
                {
                alt2=7;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:92:13: annotation
                    {
                    pushFollow(FOLLOW_annotation_in_statment101);
                    annotation1=annotation();

                    state._fsp--;
                    if (state.failed) return ;
                    if ( state.backtracking==0 ) {
                       contract.setProperty((annotation1!=null?annotation1.key:null), (annotation1!=null?annotation1.value:null)); 
                    }

                    }
                    break;
                case 2 :
                    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:93:13: trigger
                    {
                    pushFollow(FOLLOW_trigger_in_statment124);
                    trigger2=trigger();

                    state._fsp--;
                    if (state.failed) return ;
                    if ( state.backtracking==0 ) {
                       contract.addTrigger(trigger2); 
                    }

                    }
                    break;
                case 3 :
                    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:94:13: consumerResource
                    {
                    pushFollow(FOLLOW_consumerResource_in_statment150);
                    consumerResource3=consumerResource();

                    state._fsp--;
                    if (state.failed) return ;
                    if ( state.backtracking==0 ) {
                       contract.addConsumerResource(consumerResource3); 
                    }

                    }
                    break;
                case 4 :
                    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:95:13: supplierResource
                    {
                    pushFollow(FOLLOW_supplierResource_in_statment167);
                    supplierResource4=supplierResource();

                    state._fsp--;
                    if (state.failed) return ;
                    if ( state.backtracking==0 ) {
                       contract.addSupplierResource(supplierResource4); 
                    }

                    }
                    break;
                case 5 :
                    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:96:13: constraint
                    {
                    pushFollow(FOLLOW_constraint_in_statment184);
                    constraint5=constraint();

                    state._fsp--;
                    if (state.failed) return ;
                    if ( state.backtracking==0 ) {
                       contract.addCondition(constraint5); 
                    }

                    }
                    break;
                case 6 :
                    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:97:13: onFailure
                    {
                    pushFollow(FOLLOW_onFailure_in_statment207);
                    onFailure6=onFailure();

                    state._fsp--;
                    if (state.failed) return ;
                    if ( state.backtracking==0 ) {
                       contract.addOnVerificationFailsAction(onFailure6); 
                    }

                    }
                    break;
                case 7 :
                    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:98:13: onSuccess
                    {
                    pushFollow(FOLLOW_onSuccess_in_statment231);
                    onSuccess7=onSuccess();

                    state._fsp--;
                    if (state.failed) return ;
                    if ( state.backtracking==0 ) {
                       contract.addOnVerificationSucceedsAction(onSuccess7); 
                    }

                    }
                    break;

            }

            match(input,Newline,FOLLOW_Newline_in_statment253); if (state.failed) return ;

            }

        }

            catch (RecognitionException e) {
                reportError(e);
                throw e;
            } catch (Exception e) {
                throw new TreatyRecognitionException(this.input, e);
            }
        finally {
        }
        return ;
    }
    // $ANTLR end "statment"

    public static class annotation_return extends ParserRuleReturnScope {
        public String key;
        public String value;
    };

    // $ANTLR start "annotation"
    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:102:1: annotation returns [String key, String value] : AnnotationKey AnnotationValue ;
    public final TreatyParser.annotation_return annotation() throws RecognitionException {
        TreatyParser.annotation_return retval = new TreatyParser.annotation_return();
        retval.start = input.LT(1);

        Token AnnotationKey8=null;
        Token AnnotationValue9=null;

        try {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:103:5: ( AnnotationKey AnnotationValue )
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:103:9: AnnotationKey AnnotationValue
            {
            AnnotationKey8=(Token)match(input,AnnotationKey,FOLLOW_AnnotationKey_in_annotation276); if (state.failed) return retval;
            AnnotationValue9=(Token)match(input,AnnotationValue,FOLLOW_AnnotationValue_in_annotation278); if (state.failed) return retval;
            if ( state.backtracking==0 ) {

                          retval.key = (AnnotationKey8!=null?AnnotationKey8.getText():null);
                          retval.value = (AnnotationValue9!=null?AnnotationValue9.getText():null);
                      
            }

            }

            retval.stop = input.LT(-1);

        }

            catch (RecognitionException e) {
                reportError(e);
                throw e;
            } catch (Exception e) {
                throw new TreatyRecognitionException(this.input, e);
            }
        finally {
        }
        return retval;
    }
    // $ANTLR end "annotation"


    // $ANTLR start "trigger"
    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:110:1: trigger returns [URI value] : Trigger ;
    public final URI trigger() throws RecognitionException {
        URI value = null;

        Token Trigger10=null;

        try {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:111:5: ( Trigger )
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:111:9: Trigger
            {
            Trigger10=(Token)match(input,Trigger,FOLLOW_Trigger_in_trigger311); if (state.failed) return value;
            if ( state.backtracking==0 ) {
               value = new URI((Trigger10!=null?Trigger10.getText():null)); 
            }

            }

        }

            catch (RecognitionException e) {
                reportError(e);
                throw e;
            } catch (Exception e) {
                throw new TreatyRecognitionException(this.input, e);
            }
        finally {
        }
        return value;
    }
    // $ANTLR end "trigger"


    // $ANTLR start "consumerResource"
    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:114:1: consumerResource returns [Resource value] : 'consumer-resource' Identifier resourceTypeAttribute nameAttribute ;
    public final Resource consumerResource() throws RecognitionException {
        Resource value = null;

        Token Identifier11=null;
        URI resourceTypeAttribute12 = null;

        TreatyParser.nameAttribute_return nameAttribute13 = null;


        try {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:115:5: ( 'consumer-resource' Identifier resourceTypeAttribute nameAttribute )
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:115:9: 'consumer-resource' Identifier resourceTypeAttribute nameAttribute
            {
            match(input,53,FOLLOW_53_in_consumerResource337); if (state.failed) return value;
            Identifier11=(Token)match(input,Identifier,FOLLOW_Identifier_in_consumerResource339); if (state.failed) return value;
            pushFollow(FOLLOW_resourceTypeAttribute_in_consumerResource341);
            resourceTypeAttribute12=resourceTypeAttribute();

            state._fsp--;
            if (state.failed) return value;
            pushFollow(FOLLOW_nameAttribute_in_consumerResource343);
            nameAttribute13=nameAttribute();

            state._fsp--;
            if (state.failed) return value;
            if ( state.backtracking==0 ) {

                          value = createConsumerResource((Identifier11!=null?Identifier11.getText():null), resourceTypeAttribute12, (nameAttribute13!=null?input.toString(nameAttribute13.start,nameAttribute13.stop):null));
                      
            }

            }

        }

            catch (RecognitionException e) {
                reportError(e);
                throw e;
            } catch (Exception e) {
                throw new TreatyRecognitionException(this.input, e);
            }
        finally {
        }
        return value;
    }
    // $ANTLR end "consumerResource"

    public static class nameAttribute_return extends ParserRuleReturnScope {
        public String value;
    };

    // $ANTLR start "nameAttribute"
    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:121:1: nameAttribute returns [String value] : NameAttribute ;
    public final TreatyParser.nameAttribute_return nameAttribute() throws RecognitionException {
        TreatyParser.nameAttribute_return retval = new TreatyParser.nameAttribute_return();
        retval.start = input.LT(1);

        Token NameAttribute14=null;

        try {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:122:5: ( NameAttribute )
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:122:9: NameAttribute
            {
            NameAttribute14=(Token)match(input,NameAttribute,FOLLOW_NameAttribute_in_nameAttribute376); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
               retval.value = (NameAttribute14!=null?NameAttribute14.getText():null); 
            }

            }

            retval.stop = input.LT(-1);

        }

            catch (RecognitionException e) {
                reportError(e);
                throw e;
            } catch (Exception e) {
                throw new TreatyRecognitionException(this.input, e);
            }
        finally {
        }
        return retval;
    }
    // $ANTLR end "nameAttribute"


    // $ANTLR start "supplierResource"
    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:125:1: supplierResource returns [Resource value] : 'supplier-resource' Identifier resourceTypeAttribute resourceReferenceAttribute ;
    public final Resource supplierResource() throws RecognitionException {
        Resource value = null;

        Token Identifier15=null;
        URI resourceTypeAttribute16 = null;

        String resourceReferenceAttribute17 = null;


        try {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:126:5: ( 'supplier-resource' Identifier resourceTypeAttribute resourceReferenceAttribute )
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:126:9: 'supplier-resource' Identifier resourceTypeAttribute resourceReferenceAttribute
            {
            match(input,54,FOLLOW_54_in_supplierResource402); if (state.failed) return value;
            Identifier15=(Token)match(input,Identifier,FOLLOW_Identifier_in_supplierResource404); if (state.failed) return value;
            pushFollow(FOLLOW_resourceTypeAttribute_in_supplierResource406);
            resourceTypeAttribute16=resourceTypeAttribute();

            state._fsp--;
            if (state.failed) return value;
            pushFollow(FOLLOW_resourceReferenceAttribute_in_supplierResource408);
            resourceReferenceAttribute17=resourceReferenceAttribute();

            state._fsp--;
            if (state.failed) return value;
            if ( state.backtracking==0 ) {

                          value = createSupplierResource((Identifier15!=null?Identifier15.getText():null), resourceTypeAttribute16, resourceReferenceAttribute17);
                      
            }

            }

        }

            catch (RecognitionException e) {
                reportError(e);
                throw e;
            } catch (Exception e) {
                throw new TreatyRecognitionException(this.input, e);
            }
        finally {
        }
        return value;
    }
    // $ANTLR end "supplierResource"


    // $ANTLR start "resourceTypeAttribute"
    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:132:1: resourceTypeAttribute returns [URI value] : ResourceTypeAttribute ;
    public final URI resourceTypeAttribute() throws RecognitionException {
        URI value = null;

        Token ResourceTypeAttribute18=null;

        try {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:133:5: ( ResourceTypeAttribute )
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:133:9: ResourceTypeAttribute
            {
            ResourceTypeAttribute18=(Token)match(input,ResourceTypeAttribute,FOLLOW_ResourceTypeAttribute_in_resourceTypeAttribute441); if (state.failed) return value;
            if ( state.backtracking==0 ) {
               value = new URI((ResourceTypeAttribute18!=null?ResourceTypeAttribute18.getText():null)); 
            }

            }

        }

            catch (RecognitionException e) {
                reportError(e);
                throw e;
            } catch (Exception e) {
                throw new TreatyRecognitionException(this.input, e);
            }
        finally {
        }
        return value;
    }
    // $ANTLR end "resourceTypeAttribute"


    // $ANTLR start "resourceReferenceAttribute"
    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:136:1: resourceReferenceAttribute returns [String value] : ResourceReferenceAttribute ;
    public final String resourceReferenceAttribute() throws RecognitionException {
        String value = null;

        Token ResourceReferenceAttribute19=null;

        try {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:137:5: ( ResourceReferenceAttribute )
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:137:9: ResourceReferenceAttribute
            {
            ResourceReferenceAttribute19=(Token)match(input,ResourceReferenceAttribute,FOLLOW_ResourceReferenceAttribute_in_resourceReferenceAttribute467); if (state.failed) return value;
            if ( state.backtracking==0 ) {
               value = (ResourceReferenceAttribute19!=null?ResourceReferenceAttribute19.getText():null); 
            }

            }

        }

            catch (RecognitionException e) {
                reportError(e);
                throw e;
            } catch (Exception e) {
                throw new TreatyRecognitionException(this.input, e);
            }
        finally {
        }
        return value;
    }
    // $ANTLR end "resourceReferenceAttribute"


    // $ANTLR start "constraint"
    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:140:1: constraint returns [AbstractCondition value] : 'constraint' orConstraint ;
    public final AbstractCondition constraint() throws RecognitionException {
        AbstractCondition value = null;

        TreatyParser.orConstraint_return orConstraint20 = null;


        try {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:141:5: ( 'constraint' orConstraint )
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:141:9: 'constraint' orConstraint
            {
            match(input,55,FOLLOW_55_in_constraint496); if (state.failed) return value;
            pushFollow(FOLLOW_orConstraint_in_constraint498);
            orConstraint20=orConstraint();

            state._fsp--;
            if (state.failed) return value;
            if ( state.backtracking==0 ) {
               value = (orConstraint20!=null?orConstraint20.value:null); 
            }

            }

        }

            catch (RecognitionException e) {
                reportError(e);
                throw e;
            } catch (Exception e) {
                throw new TreatyRecognitionException(this.input, e);
            }
        finally {
        }
        return value;
    }
    // $ANTLR end "constraint"

    public static class orConstraint_return extends ParserRuleReturnScope {
        public AbstractCondition value;
        public Disjunction disjunction;
    };

    // $ANTLR start "orConstraint"
    // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:144:1: orConstraint returns [AbstractCondition value, Disjunction disjunction] : ( ( xorConstraint ( Or xorConstraint )+ )=>firstConstraint= xorConstraint ( Or nextConstraint= xorConstraint )+ | xorConstraint );
    public final TreatyParser.orConstraint_return orConstraint() throws RecognitionException {
        TreatyParser.orConstraint_return retval = new TreatyParser.orConstraint_return();
        retval.start = input.LT(1);

        TreatyParser.xorConstraint_return firstConstraint = null;

        TreatyParser.xorConstraint_return nextConstraint = null;

        TreatyParser.xorConstraint_return xorConstraint21 = null;


        try {
            // /Users/carlos/Projects/Eclipse Workspace/treaty/grammar/Treaty.g:145:5: ( ( xorConstraint ( Or xorConstraint )+ )=>firstConstraint= xorConstraint ( Or nextConstraint= xorConstraint )+ | xorConstraint )
            int alt4=2;
            switch ( input.LA(1) ) {
            case Not:
                {
                int LA4_1 = input.LA(2);

                if ( (synpred1_Treaty()) ) {
                    alt4=1;
                }
                else if ( (true) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }
                }
                break;
            case LParen:
                {
                int LA4_2 = input.LA(2);

                if ( (synpred1_Treaty()) ) {
                    alt4=1;
                }
                else if ( (true) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 2, input);

                    throw nvae;
                }
                }
                break;
            case 56:
                {
                int LA4_3 = input.LA(2);
